# ChangeLog for dev-php/phpgroupware
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/phpgroupware/ChangeLog,v 1.25 2004/06/25 01:24:08 agriffis Exp $

  26 May 2004; Martin Holzer <mholzer@gentoo.org>
  phpgroupware-0.9.16.000.ebuild:
  removing mysql from depend. closes 52104

  17 Apr 2004; Daniel Ahlberg <aliz@gentoo.org>
  phpgroupware-0.9.14.007.ebuild, phpgroupware-0.9.16.000.ebuild:
  Added IUSE, unstable on amd64.

  21 Mar 2004; Martin Holzer <mholzer@gentoo.org>
  phpgroupware-0.9.16.000.ebuild:
  x86 stable.

  19 Mar 2004; Daniel Ahlberg <aliz@gentoo.org>
  phpgroupware-0.9.14.007.ebuild:
  Unmask on amd64.

*phpgroupware-0.9.16.000 (04 Mar 2004)

  04 Mar 2004; Martin Holzer <mholzer@gentoo.org>
  phpgroupware-0.9.16.000.ebuild:
  Version bumped.

  08 Jan 2004; Robin H. Johnson <robbat2@gentoo.org>
  phpgroupware-0.9.14.007.ebuild:
  remove mips and arm KEYWORDS due to lack of support, ready for new repoman.

  07 Jan 2004; Martin Holzer <mholzer@gentoo.org>
  phpgroupware-0.9.14.007.ebuild:
  chaning depend. Closes 37361

  15 Dec 2003; Stuart Herbert <stuart@gentoo.org>
  phpgroupware-0.9.14.007.ebuild:
  Fix for bug #32636

  05 Dec 2003; Martin Holzer <mholzer@gentoo.org>
  phpgroupware-0.9.14.007.ebuild:
  changing chown. closes #35127.

  09 Nov 2003; Martin Holzer <mholzer@gentoo.org>
  phpgroupware-0.9.14.007.ebuild:
  Added webapps-apache.

  22 Oct 2003; Martin Holzer <mholzer@gentoo.org>
  phpgroupware-0.9.14.007.ebuild:
  adding RESTRICT="nomirror"

*phpgroupware-0.9.14.007 (18 Oct 2003)

  18 Oct 2003; Martin Holzer <mholzer@gentoo.org>
  phpgroupware-0.9.14.007.ebuild:
  Version bumped. Security one.

  13 Oct 2003; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  add metadata.xml

  19 Sep 2003; Martin Holzer <mholzer@gentoo.org>
  phpgroupware-0.9.14.006.ebuild:
  Fixed docs. Closes #29040.

  12 Aug 2003; Martin Holzer <mholzer@gentoo.org>