@@ -1,4 +1,6 @@
-MD5 868acd2e93fdfde59f34f64b199e5439 phpgroupware-0.9.16.000.ebuild 1570
-MD5 9bab27a08e68556243d52fc1a0442dd1 ChangeLog 3138
+MD5 d80e08fa5244fd8f4d4aee1097b1d23f ChangeLog 3280
 MD5 34b376f52ca199fffb4e52b83169574a metadata.xml 156
+MD5 372a2ced88e621c1de16940f951fa1f0 phpgroupware-0.9.16.001.ebuild 1569
+MD5 868acd2e93fdfde59f34f64b199e5439 phpgroupware-0.9.16.000.ebuild 1570
+MD5 476589363905ff689b142486cc9e534c files/digest-phpgroupware-0.9.16.001 78
 MD5 922ab954a67c17f0e1a566626098243a files/digest-phpgroupware-0.9.16.000 80
