@@ -1,0 +1,1 @@
+MD5 e53885fd3e1fd60b2ee587af281a7c02 phpgroupware-0.9.16.001.tar.bz2 17482130
